Adapt WinUI sample to kotlin-winrt app host